# Zedovium

./: .gitignore  LICENSE  README.md  main.py  miner.py  nodelist.json  openapi.json  pyproject.toml  requirements.txt  test.py  wallet.py
.github/workflows/: main.yml
src/: main.py  miner.py
src/data/: config.json  config.json.example  words.txt
src/node/: P2P.py  addressgen.py  mempool.py
src/pool/: pool.py  pool_miner.py
