[project]
name = "zedovium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bip39>=0.0.2",
    "black>=25.1.0",
    "ecdsa>=0.19.1",
    "isort>=6.0.1",
    "jinja2>=3.1.6",
    "prompt-toolkit>=3.0.50",
    "requests>=2.32.3",
    "sanic>=24.12.0",
    "sanic-ext>=24.12.0",
    "sanic-jinja2>=2022.11.11",
    "sanic-limiter>=0.1.3",
    "termcolor>=2.5.0",
    "ujson>=5.10.0",
    "web3>=7.10.0",
]
